--- a/cc_ex3/docker-compose.yml
+++ b/cc_ex3/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
   server:
-    build: ./server
-    image: HUB_ID/microservice:server
+    # build: ./server
+    image: yacometrue/microservice:server
     ports:
       - "3000:3000"
     depends_on:
@@ -11,11 +11,12 @@ services:
       - product-price-service
   hello-world-service:
     build: ./hello-world-service
-    image: HUB_ID/microservice:hello
+    image: yacometrue/microservice:hello
   product-descp-service:
     build: ./product-descp-service
-    image: HUB_ID/microservice:productdescp
+    image: yacometrue/microservice:productdescp
   product-price-service:
     build: ./product-price-service
-    image: HUB_ID/microservice:productprice
+    image: yacometrue/microservice:productprice
 
+# remember to remove build:
