--- a/kubernetes/kubernetes_files/deployments/hello-world.yml
+++ b/kubernetes/kubernetes_files/deployments/hello-world.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: hello-world
-          image: HUB_ID/microservice:hello
+          image: yacometrue/microservice:hello
           ports:
             - containerPort: 9001
