--- a/kubernetes/kubernetes_files/services/product-price.yml
+++ b/kubernetes/kubernetes_files/services/product-price.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: product-descp-price
+  name: product-price-service
 spec:
   selector:
     app: product-price
